# mappr

./: .clang-tidy  README.md
mappr/: CMakeLists.txt  README.md  package.xml
mappr_data/: CMakeLists.txt  package.xml
mappr_data/locations/: centralLab.yaml  views.yaml
mappr_data/rviz_config/: annotation_minimal_conf.rviz
mappr_msgs/: CMakeLists.txt  package.xml
mappr_msgs/msg/: Location.msg  MapprError.msg  Obstacle.msg  Viewpoint.msg  ViewpointArray.msg
mappr_msgs/srv/: UpdateLocation.srv  UpdateObstacle.srv  UpdateViewpoint.srv
mappr_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
mappr_rviz/include/mappr_rviz/: interactive_node.h  interactive_obstacle.h  location_add_tool.h  location_array_display.h  location_display.h  location_visual.h  polygon_util.h  topic_display.h  viewpoint.h  viewpoint_add_tool.h  viewpoint_array_display.h  viewpoint_visual.h
mappr_rviz/media/: viewpoint.dae
mappr_rviz/src/: interactive_node.cpp  interactive_obstacle.cpp  location_add_tool.cpp  location_array_display.cpp  location_display.cpp  location_visual.cpp  viewpoint.cpp  viewpoint_add_tool.cpp  viewpoint_array_display.cpp  viewpoint_visual.cpp
mappr_server/: CMakeLists.txt  package.xml  setup.py
mappr_server/src/: server.py
mappr_server/src/Classes/: Annotation.py  Arena.py  Exceptions.py  Location.py  Point2d.py  Positiondata.py  Viewpoint.py  __init__.py
mappr_server_kbase/: CMakeLists.txt  package.xml  setup.py
mappr_server_kbase/launch/: mappr_server_kbase.launch  mappr_server_kbase_editor.launch
mappr_server_kbase/src/: server.py
mappr_server_kbase/src/mappr_server_kbase/: server.py
scripts/: run-clang-tidy.py  tidy.sh
