<?xml version="1.0"?>
<package format="2">
  <name>mappr_msgs</name>
  <version>0.0.2</version>
  <description>messages for mappr</description>
  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
  <license>Apache 2.0</license>

  <author>David Leins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>